Fixes for integration tests